@@ -93,8 +93,6 @@ NOTE: sorry, this is very raw :)
 
  ************************* BUGS: *************************
 
-* crash when clicking below last trac, in darkness
-
 * red images
 * My CoreAudio player is deprecated on OS X 10.5...
     AudioToolboxPlayer.cpp:48: warning: 'MusicSequenceLoadSMFData' is deprecated (declared at /Developer/SDKs/MacOSX10.5.sdk/System/Library/Frameworks/AudioToolbox.framework/Headers/MusicPlayer.h:1613)
